--- a/src/Extensions/JustinWritesCode.CodeGeneration.Extensions.csproj
+++ b/src/Extensions/JustinWritesCode.CodeGeneration.Extensions.csproj
@@ -11,15 +11,8 @@
 -->
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <PackageId>JustinWritesCode.CodeGeneration.Extensions</PackageId>
-    <RootNamespace>$(PackageId)</RootNamespace>
-    <AssemblyName>$(PackageId)</AssemblyName>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <EnableGlobalCodeGenerators>false</EnableGlobalCodeGenerators>
   </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Common" />
-  </ItemGroup>
+  <Import Project="$(MSBuildThisFileDirectory)Include.items" />
 </Project>
