--- a/JustinWritesCode.CodeGeneration.csproj
+++ b/JustinWritesCode.CodeGeneration.csproj
@@ -9,9 +9,10 @@
    Copyright © 2022 Justin Chase, All Rights Reserved
       License: MIT (https://opensource.org/licenses/MIT)
 -->
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.Build.Traversal">
   <PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net6.0;net7.0</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0</TargetFrameworks>
+		<TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <UsingMicrosoftNetSdk>true</UsingMicrosoftNetSdk>
   </PropertyGroup>
