Checking in so I can banch

--- a/src/Extensions/JustinWritesCode.CodeGeneration.Extensions.props
+++ b/src/Extensions/JustinWritesCode.CodeGeneration.Extensions.props
@@ -12,7 +12,8 @@
 
 <Project>
   <ItemGroup>
-    <Using Include="Microsoft.CodeAnalysis" />
+    <!-- <Using Include="Microsoft.CodeAnalysis" VersionOverride="4.4.0" />
+    <Using Include="Microsoft.CodeAnalysis.Common" VersionOverride="4.4.0" /> -->
     <!-- <Using Include="JustinWritesCode.CodeGeneration.Extensions" ExcludeAssets="Analyzers" /> -->
   </ItemGroup>
 </Project>
