--- a/src/Abstractions/JustinWritesCode.CodeGeneration.Abstractions.csproj
+++ b/src/Abstractions/JustinWritesCode.CodeGeneration.Abstractions.csproj
@@ -11,8 +11,9 @@
 -->
 <Project Sdk="Microsoft.Build.NoTargets">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <!-- <TargetFramework>netstandard2.0</TargetFramework> -->
+    <!-- <TargetFrameworks>netstandard2.0</TargetFrameworks> -->
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net6.0;net7.0</TargetFrameworks>
     <PackageId>JustinWritesCode.CodeGeneration.Abstractions</PackageId>
     <AssemblyName>$(PackageId)</AssemblyName>
     <RootNamespace>$(PackageId)</RootNamespace>
