--- a/src/Abstractions/JustinWritesCode.CodeGeneration.Abstractions.props
+++ b/src/Abstractions/JustinWritesCode.CodeGeneration.Abstractions.props
@@ -13,7 +13,7 @@
 <Project>
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" PrivateAssets="All" />
     <PackageReference Include="Microsoft.CodeAnalysis.Common" />
   </ItemGroup>
   <ItemGroup>
