Working on try'n'a get this working...

--- a/src/Constants/JustinWritesCode.CodeGeneration.Constants.csproj
+++ b/src/Constants/JustinWritesCode.CodeGeneration.Constants.csproj
@@ -13,14 +13,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <!-- <TargetFramework>net7.0</TargetFramework> -->
-    <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
 		<Description>This is a **source-code-only** package that contains some constants and helper methods for code generation.</Description>
 		<ImplicitUsings>enabled</ImplicitUsings>
+    <DefineConstants>$(DefineConstants);SCRIBAN_PUBLIC;SCRIBAN_SIGNED</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="../Scriban/src/Scriban.Signed/Scriban.Signed.csproj" />
+    <!-- <ProjectReference Include="../Scriban/src/Scriban.Signed/Scriban.Signed.csproj" /> -->
     <Compile Remove="$(MSBuildThisFileDirectory)Resources/**/*" />
+    <Compile Include="../Scriban/src/Scriban/**/*.cs" />
     <EmbeddedResource Include="$(MSBuildThisFileDirectory)/Resources/**/*" LogicalName="%(Filename)%(Extension)" />
+    <PackageReference Include="System.Threading.Tasks.Extensions" VersionOverride="4.5.0" />
+    <Compile Remove="../Scriban/src/Scriban/**/Scriban.AssemblyInfo.cs" />
+    <Compile Remove="../Scriban/src/Scriban/**/*.AssemblyAttributes.cs" />
+    <PackageReference Include="Microsoft.CSharp" VersionOverride="4.5.0" />
   </ItemGroup>
   <!-- <Import Project="$(MSBuildThisFileDirectory)Include.items" /> -->
 </Project>
