--- a/JustinWritesCode.CodeGeneration.csproj
+++ b/JustinWritesCode.CodeGeneration.csproj
@@ -10,18 +10,18 @@
       License: MIT (https://opensource.org/licenses/MIT)
 -->
 <Project Sdk="Microsoft.Build.Traversal">
-  <PropertyGroup>
-		<TargetFrameworks>netstandard2.0</TargetFrameworks>
-		<TargetFramework>netstandard2.0</TargetFramework>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <UsingMicrosoftNetSdk>true</UsingMicrosoftNetSdk>
-  </PropertyGroup>
-  <ItemGroup>
-    <ProjectReference Include="./src/Abstractions/JustinWritesCode.CodeGeneration.Abstractions.csproj
-    <ProjectReference Include="./src/Constants/JustinWritesCode.CodeGeneration.Constants.csproj
-    <ProjectReference Include="./src/Extensions/JustinWritesCode.CodeGeneration.Extensions.csproj
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Remove="**/*.cs" />
-  </ItemGroup>
+    <PropertyGroup>
+        <TargetFrameworks>netstandard2.0</TargetFrameworks>
+        <TargetFramework>netstandard2.0</TargetFramework>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <UsingMicrosoftNetSdk>true</UsingMicrosoftNetSdk>
+    </PropertyGroup>
+    <ItemGroup>
+        <ProjectReference Include="./src/Abstractions/JustinWritesCode.CodeGeneration.Abstractions.csproj" />
+        <ProjectReference Include="./src/Constants/JustinWritesCode.CodeGeneration.Constants.csproj" />
+        <ProjectReference Include="./src/Extensions/JustinWritesCode.CodeGeneration.Extensions.csproj" />
+    </ItemGroup>
+    <ItemGroup>
+        <Compile Remove="**/*.cs" />
+    </ItemGroup>
 </Project>
